# Artificial_Intelligence_Engineer

./: .gitignore  README.md
homeworks/HW01/: HW01.ipynb
homeworks/HW02/: HW02.ipynb
homeworks/HW03/eda-cli/: .gitignore  README.md  pyproject.toml
homeworks/HW03/eda-cli/src/eda_cli/: __init__.py  cli.py  core.py
homeworks/HW03/eda-cli/tests/: test_core.py
homeworks/HW04/: .gitignore
homeworks/HW04/eda-cli/: README.md  pyproject.toml
homeworks/HW04/eda-cli/data/: example.csv  test_36x14.csv  test_complex.csv  test_constant.csv  test_missing.csv
homeworks/HW04/eda-cli/scripts/: client.py
homeworks/HW04/eda-cli/src/eda_cli/: api.py  core.py  viz.py
homeworks/HW04/eda-cli/src/tests/: test_core.py
homeworks/HW04/eda-cli/tests/: conftest.py  test_api.py
homeworks/HW05/: HW05.ipynb
homeworks/HW06/: HW06.ipynb  report.md
homeworks/HW07/: report.md
homeworks/HW08-09/: HW08-09.ipynb  report.md
homeworks/HW08-09/artifacts/: best_config.json  best_model.pt  runs.csv
homeworks/HW10-11/: HW10-11.ipynb  report.md
homeworks/HW10-11/artifacts/: best_classifier_config.json  runs.csv
homeworks/HW12/: HW12.ipynb  report.md
homeworks/HW13/: HW13.ipynb  report.md
homeworks/HW14/: HW14.ipynb
project/: Dockerfile  README.md  docker-compose.yml  project_overview.md  report.md  requirements.txt  self-checklist.md
project/configs/: .env.example  s_config.json
project/data/: .gitkeep
project/notebooks/: AnalysisYearByDay.ipynb  two_models_comparison.ipynb
project/src/: run_webui.py
project/tests/: .gitkeep  test-34.py
(+38 files in other folders)
